# reverse_engineering

./: .gitignore  .gitmodules  CHANGELOG.md  QUICK_START.md  README.md  fix_hugo_indexes.py  generate_pdf.py  migrate_to_hugo.py
.claude/: settings.local.json
.github/workflows/: hugo.yml
android_reversing/: CHINESE_FONT_FIX_SUMMARY.md  COMMENT_QUALITY_IMPROVEMENT.md  COOKBOOK_PROGRESS.md  DEPLOYMENT_GUIDE.md  FINAL_FIX_REPORT.md  FINAL_REPORT.md  FINAL_SUCCESS_REPORT.md  FINAL_SUMMARY.md  FIX_MD_TOOLS_GUIDE.md  MARKDOWN_FIX_PLAN.md  MARKDOWN_FIX_REPORT.md  MARKDOWN_FIX_SUMMARY.md  MARKDOWN_ISSUES_SUMMARY.md  MIXED_LANG_FIX_REPORT.md  PDF_CHINESE_FONT_FIX.md  PDF_FONT_FIX_SUMMARY.md  PDF_GENERATION_GUIDE.md  PDF_GENERATION_SUCCESS.md  PDF_LINK_FIX_SUMMARY.md  PDF_OPTIMIZATION_SUMMARY.md  PDF_SPEED_OPTIMIZATION.md  QUICK_START.md  README_FINAL.md  README_PDF.md  RESTRUCTURE_PLAN.md  SYNC_EXAMPLES.md  SYNC_README.md  TRANSLATION_REVIEW_COMPLETE.md  auto_translate.py  batch_check.sh  batch_check_automation.sh  batch_check_v2.sh  batch_fix_fences.py  batch_update_plan.py  check_all_fences.py  check_and_fix_markdown.py  check_code_comments.py  check_markdown.py  check_markdown_issues.py  check_markdown_v2.py  (+58 more)
android_reversing/.claude/: settings.local.json
android_reversing/custom_theme/: main.html
android_reversing/custom_theme/css/: chat.css
android_reversing/custom_theme/js/: chat.js
android_reversing/docs/: index.md  manage.py  pdf_style.css
android_reversing/docs/.claude/: settings.local.json
android_reversing/docs/00-Quick-Start/: index.md  intro.md  setup.md
android_reversing/docs/01-Recipes/: summary.md
android_reversing/docs/02-Tools/: summary.md
android_reversing/docs/03-Case-Studies/: case_anti_analysis_techniques.md  case_flutter_apps.md  case_malware_analysis.md  case_music_apps.md  case_social_media_and_anti_bot.md  case_study_app_encryption.md  case_unity_games.md  case_video_apps_and_drm.md  summary.md
android_reversing/docs/05-Appendix/: ctf_platforms.md  github_projects.md  glossary.md  learning_resources.md  numbering.md  summary.md
android_reversing/docs/custom_theme/: main.html
android_reversing/gemini_proxy/: server.py
android_reversing/interviews/: android_interview.html
android_reversing/output/: docs_final_debug.html  emoji_cleanup_report.md  markdown_fix_report.md  temp_all.md  temp_combined.html  temp_combined.md  temp_combined_final.md  temp_combined_fixed.md
android_reversing/playground/jni/: CMakeLists.txt  README.md
android_reversing/playground/jni/src/com/example/: JNIDemo.java
android_reversing/playground/jni/src/native/: crypto_utils.c  crypto_utils.h  jni_demo.c  jni_demo.h
android_reversing/playground/risk-control-sdk/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README.md  build.sh  cmake_install.cmake
android_reversing/playground/risk-control-sdk/docs/: ArtMethod_Direct_Registration.md
android_reversing/playground/risk-control-sdk/docs/diagrams/: 01-sdk-overview.puml  02-initialization-flow.puml  03-device-fingerprint-flow.puml  04-security-detection-flow.puml  05-svc-syscall-flow.puml  06-artmethod-registration-flow.puml  07-anti-reverse-protection-flow.puml  08-risk-assessment-flow.puml
android_reversing/playground/risk-control-sdk/examples/: ArtMethodDemo.java  RiskControlDemo.java
android_reversing/playground/risk-control-sdk/scripts/: build-android.sh.in  build.sh.in
android_reversing/playground/risk-control-sdk/src/java/com/riskcontrol/: DeviceFingerprint.java  RiskControlSDK.java  RiskScore.java  SecurityResult.java
android_reversing/playground/risk-control-sdk/src/native/: anti_reverse.c  anti_reverse.h  art_method_hook.c  art_method_hook.h  common_types.h  risk_control.c  risk_control.h  svc_syscall.c  svc_syscall.h
android_reversing/test/: aa.py  merge.py
site/: hugo.toml  hugo.yaml
site/config/_default/: hugo.toml  languages.zh-cn.toml  menus.zh-cn.toml  params.toml
site/content/: _index.md  search.md
site/content/android/: _index.md
site/content/search/: index.md
site/content/web/: _index.md
web_reversing/: COOKBOOK_UPGRADE.md  FIXES_SUMMARY.md  PDF_CHINESE_FONT_FIX.md  PDF_FIX_NOTES.md  PDF_GENERATION_USAGE.md  PDF_GENERATOR_IMPROVEMENTS.md  PDF_LINKS_FIX_README.md  PROJECT_INTRO.md  PROJECT_INTRO_SHORT.md  PROJECT_INTRO_SOCIAL.md  PROJECT_STATUS.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  create_priority_docs.py  docs_to_pdf.py  docs_to_pdf_improved.py  fill_all_docs.py  fill_all_todos.py  fill_engineering_docs.py  fill_remaining_docs.py  fix_comments.py  fix_cross_refs.py  fix_pdf_links.py  gen_pdf.sh  generate_docs.py  mkdocs.yml  requirements.txt  test_chinese_font.py  update_links.py
web_reversing/.claude/: settings.local.json
web_reversing/docs/: index.md
web_reversing/docs/00-Quick-Start/: bypass_simple_captcha.md  decrypt_api_params.md  index.md  your_first_hook.md
web_reversing/docs/01-Foundations/: browser_architecture.md  cookie_and_storage.md  cors_and_same_origin_policy.md  dom_and_bom.md  http_https_protocol.md  javascript_basics.md  javascript_execution_mechanism.md  summary.md  tls_ssl_handshake.md  web_api_and_ajax.md  webassembly_basics.md
web_reversing/docs/02-Tooling/: ast_tools.md  browser_devtools.md  burp_suite_guide.md  charles_guide.md  fiddler_guide.md  nodejs_debugging.md  puppeteer_playwright.md  selenium_guide.md  summary.md  v8_tools.md  wireshark_guide.md
web_reversing/docs/03-Basic-Recipes/: api_reverse_engineering.md  crypto_identification.md  debugging_techniques.md  dynamic_parameter_analysis.md  hooking_techniques.md  re_workflow.md  summary.md  websocket_reversing.md
web_reversing/docs/04-Advanced-Recipes/: anti_scraping_deep_dive.md  browser_fingerprinting.md  canvas_fingerprinting.md  captcha_bypass.md  csp_bypass.md  frontend_hardening.md  http2_http3.md  javascript_deobfuscation.md  javascript_vm_protection.md  pwa_service_worker.md  summary.md  tls_fingerprinting.md  (+2 more)
web_reversing/output/: docs_debug.html  docs_final_debug.html
(+343 files in other folders)
